[gd_scene load_steps=9 format=3 uid="uid://crm7axpqrtb48"]

[ext_resource type="Script" path="res://scripts/go_back_button.gd" id="1_iymfn"]
[ext_resource type="Script" path="res://scripts/productManager.gd" id="2_c0ao5"]
[ext_resource type="Texture2D" uid="uid://d1pehusfl1yxo" path="res://sprites/simon_/Bookshelves-Empty.svg" id="2_vae23"]
[ext_resource type="Script" path="res://product.gd" id="3_s7cuo"]
[ext_resource type="Texture2D" uid="uid://coqbmrrg3svpr" path="res://sprites/simon_/Capture.PNG" id="4_1l5tv"]
[ext_resource type="Texture2D" uid="uid://dilnktkpd11bd" path="res://sprites/simon_/sw.PNG" id="5_ir5jk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvmrr"]
size = Vector2(182.858, 668.571)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byn3y"]
size = Vector2(251.429, 762.857)

[node name="Camera2D" type="Camera2D"]
position = Vector2(-99, 6)
script = ExtResource("1_iymfn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -326.0
offset_right = 579.0
offset_bottom = 324.0
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.282353, 0.25098, 1)

[node name="Button" type="Button" parent="Control"]
layout_mode = 2
offset_left = 14.0
offset_top = 21.0
offset_right = 214.0
offset_bottom = 66.0
text = "Go back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 354.0
offset_top = 53.0
offset_right = 579.0
offset_bottom = 313.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.94902, 0.898039, 0.878431, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/ColorRect"]
self_modulate = Color(0.203922, 0.203922, 0.203922, 1)
top_level = true
layout_mode = 2
anchor_right = 1.0
offset_left = 266.0
offset_top = 63.0
offset_right = -686.0
offset_bottom = 88.0
grow_horizontal = 2
bbcode_enabled = true
text = "Buy a plastic bottle"
structured_text_bidi_override = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
modulate = Color(0.572549, 0.572549, 0.572549, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bookshelves-empty" type="Sprite2D" parent="."]
position = Vector2(-19, -34)
scale = Vector2(1.998, 1.486)
texture = ExtResource("2_vae23")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(235, -31)
scale = Vector2(0.35, 0.35)
script = ExtResource("2_c0ao5")

[node name="Area2D" type="Area2D" parent="Node2D"]
z_index = 2
position = Vector2(-222.857, -80)
priority = 10
script = ExtResource("3_s7cuo")
isWrong = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(-77.1427, -140)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_qvmrr")

[node name="Capture4" type="Sprite2D" parent="Node2D/Area2D"]
z_index = 1
position = Vector2(-105.714, -157.143)
scale = Vector2(1.02521, 0.974712)
texture = ExtResource("4_1l5tv")

[node name="Area2D2" type="Area2D" parent="Node2D"]
position = Vector2(-871.429, -77.1429)
script = ExtResource("3_s7cuo")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D2"]
position = Vector2(68.571, -161.428)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_byn3y")

[node name="Capture2" type="Sprite2D" parent="Node2D/Area2D2"]
position = Vector2(65.7143, -188.571)
scale = Vector2(1.2026, 1.06697)
texture = ExtResource("5_ir5jk")

[node name="wrong_answer" type="ColorRect" parent="."]
visible = false
offset_left = -346.0
offset_top = -134.0
offset_right = -2.0
offset_bottom = 177.0

[node name="RichTextLabel" type="RichTextLabel" parent="wrong_answer"]
self_modulate = Color(0.662745, 0.372549, 0.65098, 1)
layout_mode = 0
offset_left = 55.0
offset_top = 126.0
offset_right = 182.0
offset_bottom = 151.0
scale = Vector2(1.96324, 2.48731)
text = "Wrong Answer"

[node name="right_answer" type="ColorRect" parent="."]
visible = false
offset_left = 105.0
offset_top = -133.0
offset_right = 449.0
offset_bottom = 178.0

[node name="RichTextLabel" type="RichTextLabel" parent="right_answer"]
self_modulate = Color(0.352941, 0.564706, 0.235294, 1)
layout_mode = 0
offset_left = 64.0
offset_top = 126.0
offset_right = 191.0
offset_bottom = 151.0
scale = Vector2(1.96324, 2.48731)
text = "Right answer"

[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="input_event" from="Node2D/Area2D" to="Node2D/Area2D" method="_input_per"]
[connection signal="input_event" from="Node2D/Area2D2" to="Node2D/Area2D2" method="_input_per"]
